--- a/WebGUI/css/SlowControlsDashboard.css
+++ b/WebGUI/css/SlowControlsDashboard.css
@@ -313,7 +313,26 @@
 		margin-bottom:				20px;
 	}
 
-	#popupLoadFile {
+	.popupCsv {
+		font-family: 				"Lucida Sans Unicode", "Lucida Grande", Verdana, Arial, Helvetica, sans-serif;
+
+		width:						450px;
+		height:						200px;
+		background-color: 			#002540;
+		z-index:					9;
+		position: 					fixed;
+		top: 						40%;
+		left: 						50%;
+		margin-top: 				-100px;
+		margin-left: 				-200px;
+		opacity:					0.9;
+		border-radius:				5px;
+		padding:					6px;
+		color:						#c4e9f5;
+		border: 					2px solid #c4e9f5;
+	}
+
+	#popupUploadSaveCsvFile {
 		display: 					none;
 	}
 
