--- a/WebGUI/css/SlowControlsDashboard.css
+++ b/WebGUI/css/SlowControlsDashboard.css
@@ -651,7 +651,7 @@
 		margin: 					0px;
 		outline: 					none;
 		color: 						rgba(211,211,211, 0.8);
-		width: 						100%;
+		!width: 					100%;
 		height: 					90%;
 	}
 
