Fixes to debug-off mode, and minor artdaq config GUI fixes.

--- a/WebGUI/css/ConfigurationGUI_artdaq.css
+++ b/WebGUI/css/ConfigurationGUI_artdaq.css
@@ -231,6 +231,10 @@
 			font-size: 				30px;
 			font-weight: 			bold;
 			color: 					rgb(15, 152, 76);
+
+			-webkit-user-select: 	none;
+			-moz-user-select: 		none;
+			user-select:			none;
 		}
 		
 		#selectionBoxDiv {
