WebGUI/Plot.html page and plot features in WebGUI/DaqRoomHealth.html

--- a/WebGUI/css/DqmPagesCss/Plot.css
+++ b/WebGUI/css/DqmPagesCss/Plot.css
@@ -13,99 +13,21 @@ body {
 
 /* Column containers */
 .mainBlockContainer {
+
 	display: flex;
 	flex-direction: column;
-  }
-
-.topBlockContainer {
-	
-  }
-
-.bottomBlockContainer {
-
-  }
-
-  /* Create two unequal columns that sits next to each other */
-  /* Sidebar/left column */
-  .tableContainer {
-	-ms-flex: 20%; /* IE10 */
-	flex: 20%;
-	background-color: white;
-	padding: 0px;
+	margin: 20px;
   }
   
   /* Main column */
   .plotContainer {
-	height: 55%;
-	width: 40%;
-	vertical-align: top;
-	background-color: white;
-	margin-left: 30%;
-	position: fixed;
-  }
-
-  /* PV button */
-  .pvButton {
-	height: 100%;
 	width: 100%;
-	color: white;
-	border: none;
-	background-color: transparent;
-	
+	height: 100%;
+	background-color: white;
   }
 
-  .pvButton:hover {
-	background-color: lightcoral;
-	transition: 0.7s;
+   /* TIME button */
+   .timeButton {
+	margin-left: 3px;
+	margin-bottom: 6px;
   }
-
-  .rack {
-	background-color: transparent;
-	border: 2px solid;
-	height: 300px;
-	width:	150px;
-	float: left;
-	margin-left: 30px;
-	margin-top: 30px;
-  }
-
-  .led {
-	border-radius: 50%;
-	width: 20px;
-    height: 20px;
-	background-color: gray;
-	margin-left: 2px;
-	float: left;
-  }
-
-  .temper {
-	width: 140px;
-    height: 30px;
-	background-color: gray;
-	margin-top: 30px;
-	margin-left: 2px;
-	float: left;
-  }
-
-/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 700px) {
-	.topBlockContainer {
-	  flex-direction: column;
-	}
-
-	.plotContainer {
-		position: inherit;
-		bottom: 0px;
-	}
-}
-
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {top {
-		flex-direction: column;
-	  }
-
-	  .plotContainer {
-		position: inherit;
-		bottom: 0px;
-	}
-}
